@@ -3,10 +3,7 @@ package com.project.shop.item.service;
 import com.project.shop.item.domain.Item;
 import com.project.shop.item.domain.ItemImg;
 import com.project.shop.item.domain.Option;
-import com.project.shop.item.dto.request.ItemImgRequest;
-import com.project.shop.item.dto.request.ItemUpdateRequest;
-import com.project.shop.item.dto.request.ItemRequest;
-import com.project.shop.item.dto.request.OptionRequest;
+import com.project.shop.item.dto.request.*;
 import com.project.shop.item.dto.response.ItemResponse;
 import com.project.shop.item.exception.ItemException;
 import com.project.shop.item.repository.CategoryRepository;
@@ -17,6 +14,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.project.shop.global.exception.ErrorCode.NOT_FOUND_ITEM;
@@ -54,9 +52,11 @@ public class ItemService {
     public void create(ItemRequest itemRequest){
         //category
         var category = categoryRepository
-                .findByCategoryNameAndBrandName(itemRequest.getCategoryRequest().getCategoryName(),itemRequest.getCategoryRequest().getBrandName());
+                .findByCategoryNameAndBrandName(
+                        itemRequest.getCategoryRequest().getCategoryName(),
+                        itemRequest.getCategoryRequest().getBrandName());
 
-        if(category.isEmpty()){
+        if(!category.isPresent()){
             throw new RuntimeException("NOT_FOUND_CATEGORY");
         }
 
@@ -65,17 +65,16 @@ public class ItemService {
         item.updateCategory(category.get());
         itemRepository.save(item);
 
-        //수정 itemId는 어떻게 저장되는거지?
         //itemImg
         List<ItemImg> itemImgList = itemRequest
                 .getItemImgRequestList()
                 .stream()
                 .map(ItemImgRequest::toEntity)
-                .toList();
+                .collect(Collectors.toList());
 
-//        for (ItemImg itemImg : itemImgList) {
-//            itemImg.updateItem(item);
-//        }
+        for (ItemImg itemImg : itemImgList) {
+            itemImg.updateItem(item);
+        }
 
         itemImgRepository.saveAll(itemImgList);
 
@@ -84,7 +83,7 @@ public class ItemService {
                 .getOptionRequestList()
                 .stream()
                 .map(OptionRequest::toEntity)
-                .toList();
+                .collect(Collectors.toList());
 
         for (Option option : optionList) {
             option.updateItem(item);
@@ -92,14 +91,67 @@ public class ItemService {
 
         optionRepository.saveAll(optionList);
 
-
-
     }
 
     //상품 수정
+    //    item + itmeImg + option
     public void update(Long itemId, ItemUpdateRequest itemUpdateRequest){
-//        기존꺼 삭제하고 수정?
-//        itemRepository.save(itemUpdateRequest.toEntity(itemUpdateRequest));
+
+        var category = categoryRepository
+                        .findByCategoryNameAndBrandName(
+                                itemUpdateRequest.getCategoryUpdateRequest().getCategoryName(),
+                                itemUpdateRequest.getCategoryUpdateRequest().getBrandName()
+                        );
+
+        if(!category.isPresent()){
+            throw new RuntimeException("NOT_FOUND_CATEGORY");
+        }
+
+        //item
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new RuntimeException("NOT_FOUND_ITEM"));
+
+        item.updateCategory(category.get());
+
+        //itemImg
+        //기존 이미지 삭제하고 다시 등록
+        List<ItemImg> itemImgList = itemImgRepository.findByItemId(itemId);
+
+        if(itemImgList.isEmpty()){
+            throw new RuntimeException("NOT_FOUND_OPTION");
+        }
+        itemImgRepository.deleteAll(itemImgList);
+
+        List<ItemImg> itemImgUpdateList = itemUpdateRequest
+                .itemImgUpdateRequestList()
+                .stream()
+                .map(ItemImgUpdateRequest::toEntity)
+                .collect(Collectors.toList());
+
+        for (ItemImg itemImg : itemImgUpdateList) {
+            itemImg.updateItem(item);
+        }
+
+        itemImgRepository.saveAll(itemImgUpdateList);
+
+    //option
+      List<Option> optionList = optionRepository.findByItemId(itemId);
+
+      if(optionList.isEmpty()){
+          throw new RuntimeException("NOT_FOUND_OPTION");
+      }
+      optionRepository.deleteAll(optionList);
+
+      List<Option> optionUpdateList = itemUpdateRequest
+              .optionUpdateRequestList()
+              .stream().map(OptionUpdateRequest::toEntity)
+              .collect(Collectors.toList());
+
+        for (Option option : optionUpdateList) {
+            option.updateItem(item);
+        }
+
+        optionRepository.saveAll(optionUpdateList);
     }
 
     //상품 삭제
